--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
         username: ${{ secrets.VPS_USERNAME }}
         key: ${{ secrets.VPS_SSH_KEY }}
         script: |
-          cd /var/www/greatticket
+          cd /var/www/new.greatticket.my
           git pull origin main
           composer install --no-dev --optimize-autoloader
           php artisan migrate --force
@@ -59,4 +59,3 @@ jobs:
           php artisan route:cache
           php artisan view:cache
           php artisan queue:restart
-          sudo systemctl reload nginx
