--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -4,7 +4,7 @@
 
 server {
     listen 80;
-    server_name your-domain.com www.your-domain.com;
+    server_name new.greatticket.my;
     
     # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
@@ -12,9 +12,9 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name your-domain.com www.your-domain.com;
+    server_name new.greatticket.my;
     
-    root /var/www/greatticket/public;
+    root /var/www/new.greatticket.my/public;
     index index.php index.html index.htm;
     
     # SSL Configuration (update paths to your certificates)
