Configure deployment to preserve VPS .env file
- Update GitHub Actions to preserve existing .env on VPS
- Update deployment script to not overwrite .env file
- Add .env preservation logic to avoid configuration loss
- Update documentation to clarify .env file handling
- Ensure VPS-specific settings are maintained during deployments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,8 @@ jobs:
         script: |
           cd /var/www/new.greatticket.my
           git pull origin main
+          # Keep the existing .env file (don't overwrite)
+          git checkout HEAD -- .env 2>/dev/null || true
           composer install --no-dev --optimize-autoloader
           php artisan migrate --force
           php artisan config:cache
